--- a/ios/ios-test-input-system-1/ios-test-input-system-1/Main/MainViewController.xib
+++ b/ios/ios-test-input-system-1/ios-test-input-system-1/Main/MainViewController.xib
@@ -49,7 +49,7 @@
                     <rect key="frame" x="0.0" y="80" width="375" height="547"/>
                 </sceneKitView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eSY-Ns-JLf">
-                    <rect key="frame" x="0.0" y="20" width="375" height="60"/>
+                    <rect key="frame" x="8" y="20" width="359" height="60"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="60" id="Y05-mV-BRy"/>
                     </constraints>
@@ -65,9 +65,9 @@
                 <constraint firstItem="eSY-Ns-JLf" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="Hy3-wN-hnf"/>
                 <constraint firstItem="TVc-0J-HL8" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="NiU-hF-t5v"/>
                 <constraint firstItem="TVc-0J-HL8" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="TGD-eG-TO9"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="eSY-Ns-JLf" secondAttribute="trailing" id="bKR-ct-y3A"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="eSY-Ns-JLf" secondAttribute="trailing" constant="8" id="bKR-ct-y3A"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="TVc-0J-HL8" secondAttribute="trailing" id="drb-lW-Uj1"/>
-                <constraint firstItem="eSY-Ns-JLf" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="eYY-QE-yeR"/>
+                <constraint firstItem="eSY-Ns-JLf" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="8" id="eYY-QE-yeR"/>
                 <constraint firstItem="cur-8g-rzK" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="jdM-9F-UFU"/>
                 <constraint firstItem="TVc-0J-HL8" firstAttribute="top" secondItem="cur-8g-rzK" secondAttribute="bottom" id="zr5-xz-xRB"/>
             </constraints>
