--- a/ios/ios-test-input-system-1/ios-test-input-system-1/Main/MainViewController.xib
+++ b/ios/ios-test-input-system-1/ios-test-input-system-1/Main/MainViewController.xib
@@ -12,6 +12,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainViewController" customModule="ios_test_input_system_1" customModuleProvider="target">
             <connections>
+                <outlet property="activateButton" destination="iyz-eW-3KT" id="xgm-n2-yax"/>
+                <outlet property="deactivateButton" destination="wC0-57-mTd" id="a8H-1K-sEG"/>
                 <outlet property="dragLeftButton" destination="4u3-6o-dia" id="Oh5-f6-5IQ"/>
                 <outlet property="dragRightButton" destination="nTD-G7-Lmc" id="YnR-SI-aza"/>
                 <outlet property="outputLabel" destination="eSY-Ns-JLf" id="YQ9-qr-R0J"/>
@@ -25,28 +27,8 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="TVc-0J-HL8">
-                    <rect key="frame" x="0.0" y="627" width="375" height="40"/>
-                    <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4u3-6o-dia" userLabel="Button0">
-                            <rect key="frame" x="0.0" y="0.0" width="125" height="40"/>
-                            <state key="normal" title="&lt; Drag"/>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nTD-G7-Lmc" userLabel="Button1">
-                            <rect key="frame" x="125" y="0.0" width="125" height="40"/>
-                            <state key="normal" title="Drag &gt;"/>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pEs-TE-sIl" userLabel="Button2">
-                            <rect key="frame" x="250" y="0.0" width="125" height="40"/>
-                            <state key="normal" title="Tap"/>
-                        </button>
-                    </subviews>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="40" id="L1m-rO-fmv"/>
-                    </constraints>
-                </stackView>
                 <sceneKitView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cur-8g-rzK">
-                    <rect key="frame" x="0.0" y="80" width="375" height="547"/>
+                    <rect key="frame" x="0.0" y="80" width="375" height="499"/>
                 </sceneKitView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eSY-Ns-JLf">
                     <rect key="frame" x="8" y="20" width="359" height="60"/>
@@ -57,6 +39,48 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Nk2-h5-Nay" userLabel="stack1">
+                    <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wC0-57-mTd">
+                            <rect key="frame" x="0.0" y="0.0" width="187.5" height="44"/>
+                            <state key="normal" title="Deactivate"/>
+                            <connections>
+                                <action selector="deactivateButtonTouchUpInside:" destination="-1" eventType="touchUpInside" id="4Yh-Dj-TyK"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iyz-eW-3KT">
+                            <rect key="frame" x="187.5" y="0.0" width="187.5" height="44"/>
+                            <state key="normal" title="Activate"/>
+                            <connections>
+                                <action selector="activateButtonTouchUpInside:" destination="-1" eventType="touchUpInside" id="sFa-Cr-z2L"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="44" id="oeY-Di-PtT"/>
+                    </constraints>
+                </stackView>
+                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="TVc-0J-HL8" userLabel="stack0">
+                    <rect key="frame" x="0.0" y="579" width="375" height="44"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4u3-6o-dia" userLabel="Button0">
+                            <rect key="frame" x="0.0" y="0.0" width="125" height="44"/>
+                            <state key="normal" title="&lt; Drag"/>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nTD-G7-Lmc" userLabel="Button1">
+                            <rect key="frame" x="125" y="0.0" width="125" height="44"/>
+                            <state key="normal" title="Drag &gt;"/>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pEs-TE-sIl" userLabel="Button2">
+                            <rect key="frame" x="250" y="0.0" width="125" height="44"/>
+                            <state key="normal" title="Tap"/>
+                        </button>
+                    </subviews>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="44" id="L1m-rO-fmv"/>
+                    </constraints>
+                </stackView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
@@ -64,11 +88,14 @@
                 <constraint firstItem="cur-8g-rzK" firstAttribute="top" secondItem="eSY-Ns-JLf" secondAttribute="bottom" id="GcJ-ZS-vfu"/>
                 <constraint firstItem="eSY-Ns-JLf" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="Hy3-wN-hnf"/>
                 <constraint firstItem="TVc-0J-HL8" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="NiU-hF-t5v"/>
-                <constraint firstItem="TVc-0J-HL8" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="TGD-eG-TO9"/>
+                <constraint firstItem="TVc-0J-HL8" firstAttribute="bottom" secondItem="Nk2-h5-Nay" secondAttribute="top" id="OiN-Qe-ecM"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="eSY-Ns-JLf" secondAttribute="trailing" constant="8" id="bKR-ct-y3A"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Nk2-h5-Nay" secondAttribute="trailing" id="d1g-2l-1G3"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="TVc-0J-HL8" secondAttribute="trailing" id="drb-lW-Uj1"/>
                 <constraint firstItem="eSY-Ns-JLf" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="8" id="eYY-QE-yeR"/>
                 <constraint firstItem="cur-8g-rzK" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="jdM-9F-UFU"/>
+                <constraint firstItem="Nk2-h5-Nay" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="lK1-Rq-wNN"/>
+                <constraint firstAttribute="bottom" secondItem="Nk2-h5-Nay" secondAttribute="bottom" id="mYH-1g-KzC"/>
                 <constraint firstItem="TVc-0J-HL8" firstAttribute="top" secondItem="cur-8g-rzK" secondAttribute="bottom" id="zr5-xz-xRB"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
